2010-02-08  Charlie Reis  <creis@chromium.org>

Reviewed by Darin Adler.

        onbeforeunload not called at window close + frame or iframe focused
        https://bugs.webkit.org/show_bug.cgi?id=27481

        Chromium and WebKit on Windows will now fire beforeunload handlers
        even if an inner frame is focused.

        Layout tests aren't able to test this bug, since it requires closing
        the actual browser window, not calling window.close().  Instead,
        test with WebCore/manual-tests/onbeforeunload-focused-iframe.html.

        * manual-tests/onbeforeunload-focused-iframe.html: Added.
        * manual-tests/resources/focused-iframe.html: Added.
2010-02-08  Charlie Reis  <creis@chromium.org>

        Reviewed by Darin Adler.

        onbeforeunload not called at window close + frame or iframe focused
        https://bugs.webkit.org/show_bug.cgi?id=27481
        http://code.google.com/p/chromium/issues/detail?id=32615
        http://code.google.com/p/chromium/issues/detail?id=17157

        Chromium and WebKit on Windows will now fire beforeunload handlers
        even if an inner frame is focused.

        Layout tests aren't able to test this bug, since it requires closing
        the actual browser window, not calling window.close().  Instead,
        test with WebCore/manual-tests/onbeforeunload-focused-iframe.html.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::dispatchBeforeUnloadEvent):
2010-02-08  Charlie Reis  <creis@chromium.org>

        Reviewed by Darin Adler.

        onbeforeunload not called at window close + frame or iframe focused
        https://bugs.webkit.org/show_bug.cgi?id=27481

        Chromium and WebKit on Windows will now fire beforeunload handlers
        even if an inner frame is focused.

        Layout tests aren't able to test this bug, since it requires closing
        the actual browser window, not calling window.close().  Instead,
        test with WebCore/manual-tests/onbeforeunload-focused-iframe.html.

        * WebView.cpp:
        (WebView::shouldClose):

Canonical link: https://commits.webkit.org/45832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54519 268f45cc-cd09-0410-ab3c-d52691b4dbfc